--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-google-map": "^3.1.1",
+    "react-popper": "^0.10.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
